--- a/Final.rmd
+++ b/Final.rmd
@@ -1,12 +1,12 @@
 ---
 title: "Covid91 vaccine study Final2023"
-author: "Put your name here!"
+author: "Andrea Calderon"
 output: 
   html_document:
     number_sections: true
     toc: true
     toc_depth: 5
-date: "`r Sys.Date()`" 
+date: Spring 2024 final 
 ---
 
 ```{r include=FALSE,echo=FALSE}
@@ -23,6 +23,17 @@ mutate(across(where(is.character), as.factor))
 # Introduction
 
 A new  preventative vaccine (covid921) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of subpopulations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbage when referencing p-values in conclusions.
+
+
+$H_o$: There is no difference in drug effectiveness based on the following population subgroups; sex, drug use, sexual orientation. 
+
+$H_a$: There is a difference in drug effectiveness based on the following population subgroups; sex, drug use, sexual orientation. 
+
+
+## Methods 
+
+Sexual orientation, substance use, and sex are the study's factors. We will utilize the Cat~Cat helper file because we want to determine whether drug effectiveness varies depending on the population subgroups: sex, drug usage, and sexual orientation are all categorical variables. 
+
 
 ## Males
 
