--- a/Final.rmd
+++ b/Final.rmd
@@ -25,14 +25,13 @@ mutate(across(where(is.character), as.factor))
 A new  preventative vaccine (covid921) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of subpopulations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbage when referencing p-values in conclusions.
 
 
-$H_o$: There is no difference in drug effectiveness based on the following population subgroups; sex, drug use, sexual orientation. 
+$H_o$: There is no difference in the effectiveness of the covid 921 vaccine in females.
 
-$H_a$: There is a difference in drug effectiveness based on the following population subgroups; sex, drug use, sexual orientation. 
-
+$H_a$: There is a difference in the effectiveness of the covid 921 vaccine in females.
 
 ## Methods 
 
-Sexual orientation, substance use, and sex are the study's factors. We will utilize the Cat~Cat helper file because we want to determine whether drug effectiveness varies depending on the population subgroups: sex, drug usage, and sexual orientation are all categorical variables. 
+The variables in this study: Males-categorical, Females-categorical, LGBT-categorical, Druggies, categorical. We will be using the Cat~Cat helper file.
 
 
 ## Males
